syntax = "proto3";

package com.example.template.grpc;

option java_multiple_files = true;
option java_package = "com.example.template.adapters.grpc.generated";
option java_outer_classname = "GreetingProto";

message CreateGreetingRequest {
  string name = 1;
}

message GetGreetingRequest {
  string id = 1;
}

message GreetingResponse {
  string id = 1;
  string message = 2;
}

service GreetingService {
  rpc CreateGreeting(CreateGreetingRequest) returns (GreetingResponse);
  rpc GetGreeting(GetGreetingRequest) returns (GreetingResponse);
}
